bdr.BDR2.scala.error
Compilation error:
BDR2:1: error: not found: value letter
letter match {
^